@@ -14,6 +14,8 @@
 
 # Under construction
 =sys-kernel/calculate-sources-2.6.37.4
+=sys-kernel/calculate-sources-2.6.36.4
+=sys-kernel/calculate-sources-2.6.32.33
 #>=app-misc/cld-meta-10.9.1
 #>=app-misc/cldg-meta-10.9.1
 #>=app-misc/cldx-meta-10.9.1
