@@ -22,15 +22,19 @@ DIST linux-2.6.36.tar.bz2 70277083 RMD160 d739da505a79e71a1370d36e1373b36be055c1
 DIST linux-2.6.37.tar.bz2 73577826 RMD160 fced3801f3c94aa545c90e10981de616376a3b41 SHA1 eba83c89e71a86060ef6ff76aefff660aef819e2 SHA256 edbf091805414739cf57a3bbfeba9e87f5e74f97e38f04d12060e9e0c71e383a
 DIST patch-2.6.32.27.bz2 676264 RMD160 0e88faace47a53442cbbbcbf7f5f7802e00ba3ce SHA1 78111d270e40026e14fd8fe6524ff633ef9a41bc SHA256 a847710f1e1806d869042d85c015723be251dc9ccfb7ef624669e6f60252f423
 DIST patch-2.6.32.28.bz2 687529 RMD160 fd2ab29f3f3f4bd22ae3ca57f96d10f3cbda245d SHA1 5b9f13c580092dbedb70180de9553cac8f048684 SHA256 c0e7f8c438210e05b09c698a16990c355f218518b87e54046186c540e9bfa827
+DIST patch-2.6.32.33.bz2 752145 RMD160 c66a909de446cd36abb32e60028bb302f6d8d110 SHA1 ab25eb42bd383421a67faffd4d44302865f5a15c SHA256 a35ed32bf1fe24c2a1ca5d6e7b976e8e58efb658f174900d42ac5dce9006ad78
 DIST patch-2.6.35.9.bz2 184494 RMD160 875835bdd6726a0e8fcbefcdb91b09489cc548ba SHA1 49a7240a24b179553fa27873df4e65d288a2bdbe SHA256 337a1649110d5bd4d08b178b9437d88df692b2d4ed62b988083a132d0e057725
 DIST patch-2.6.36.2.bz2 98425 RMD160 92fdef7ecbc520f46d24b0981689fb2174cb3c0c SHA1 e70de463a1b3a287ef47f4950c3acb8f5b43ed99 SHA256 3ccff8d0ec6a6dfb76e86f8dc337ff00e699c5c9ea6d553866188b4d4555d3e5
 DIST patch-2.6.36.3.bz2 140429 RMD160 2284b5940481e62e6e1b91c4f324333ecc3dba8d SHA1 e556a85a866003939d78068c63bd2c7920e27cc5 SHA256 e3b1a8e0461eabe7175f8078569916cc94de38524157ae3bc00cc3cddc618af9
+DIST patch-2.6.36.4.bz2 186814 RMD160 ed06acb39f2e272d388bb04810d0d9626c70fa55 SHA1 7c2cb8f0f7957af3fbc56cbf0a012465cf66c9ec SHA256 77186bff89a5ae7e289b33b7e721921fecd978a2df05b0e69bdafc1a9bfa30f2
 DIST patch-2.6.37.4.bz2 139328 RMD160 1e5ee5b5ea9cf52dc839ae49d83687024acbab9a SHA1 baacae8e8bbfbb80cfa9aa2a0aff7ac8e315b56a SHA256 6c0352055d5502fb177eb573a881629dcf5dc979342293fde08d782a17b5d68c
 EBUILD calculate-sources-2.6.32.27.ebuild 741 RMD160 be7ac9ba69c0fdaac93557404c547621e1c93937 SHA1 cfa2b0ae9e5b1d6e134b28c055e4532bd7948a9d SHA256 64eb8b8bcc41963a457ea343aba414ae7e388260912b5e170db5e9298c23176c
 EBUILD calculate-sources-2.6.32.28.ebuild 754 RMD160 84f99a822f8d4078ffbd2373d40fd905a134794b SHA1 7808e3c4e2a54f9955b120dcbcf85f2fd8ab396b SHA256 959bb169c8427191cbf9a4e5c74e871bf699ae0eef17068fbc85b24d2bd55599
+EBUILD calculate-sources-2.6.32.33.ebuild 754 RMD160 84f99a822f8d4078ffbd2373d40fd905a134794b SHA1 7808e3c4e2a54f9955b120dcbcf85f2fd8ab396b SHA256 959bb169c8427191cbf9a4e5c74e871bf699ae0eef17068fbc85b24d2bd55599
 EBUILD calculate-sources-2.6.35.9.ebuild 1324 RMD160 42d73ad5fcc292c90df73cbb0b4933ab7fbf4c74 SHA1 7a23fb44ad946e45f804bc9e7539905e36545124 SHA256 94fd25687d0f182ae4fa6a59c91605dbb326bffa171195bf92f837e96d3e6d64
 EBUILD calculate-sources-2.6.36.2.ebuild 1330 RMD160 c56242f09611ce06d193b9aae1acd42369b119ae SHA1 a02dde56690d2c9d99d7b8d21eb60cc7a15ce6c3 SHA256 ea756887d381b6fff444d5efe7f97c69d4917240ff93dd12f2d804a0fe9353ad
 EBUILD calculate-sources-2.6.36.3.ebuild 1330 RMD160 ea0f8e3d725f9acdbc0ada775565a9214aae2066 SHA1 f6efacc1b71261c4302a539eb6e9f4a033afa583 SHA256 1ccec7bb325127cd3703e99763b467c96b660bc297ac38a888c8138ac4b3608e
+EBUILD calculate-sources-2.6.36.4.ebuild 1330 RMD160 ea0f8e3d725f9acdbc0ada775565a9214aae2066 SHA1 f6efacc1b71261c4302a539eb6e9f4a033afa583 SHA256 1ccec7bb325127cd3703e99763b467c96b660bc297ac38a888c8138ac4b3608e
 EBUILD calculate-sources-2.6.37.4.ebuild 1328 RMD160 494c00a3eaeeb017671856ffa4ed601be2f43072 SHA1 06567481c9c91c9e7ab34149a186e751b170d6a9 SHA256 03649befe31dd8d3bdadb3127e5851474126ab4fc3e77f7f1aa586756642e1f5
-MISC ChangeLog 4985 RMD160 c28a8c3bb7c87f6b40f38f0edeb442485decf263 SHA1 9fd709fc2d571c828d10e49f468a4ee8ddf10997 SHA256 d3048f6d655555a1f994713a82ed3043ac72c18371eaa8c7297f0220d9d1f7aa
+MISC ChangeLog 5223 RMD160 71183706081652e0a89bb3d8bfa397609b737671 SHA1 e251ecf44ad4915812eea36006620f1e56ce30ae SHA256 ec12a43ca8a6bca11785c238bdeff1c882176fd4316ace12b55b12ae25658a7a
 MISC metadata.xml 523 RMD160 855108e020b3f1fe32f843accc94a57f15affa0e SHA1 7fbeb862ff719c9ef63925b7f18104ff6eac27dd SHA256 997dc6d02e44eef86cc9653d7588b9f65e9033f02e28b3a8d98f48df82561f3c
